file(COPY input/ DESTINATION input)
add_executable(Darcy Darcy.f90)
set_target_properties(Darcy PROPERTIES LINKER_LANGUAGE Fortran)
target_link_libraries(Darcy iron)
oc_add_test(FluidMechanics_Darcy_Poly Darcy 1 test1)
oc_add_test(FluidMechanics_Darcy_Exp Darcy 2 test2)
oc_add_test(FluidMechanics_Darcy_SinCos Darcy 3 test3)
